--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
             <ul class="advant-list">
                 <li class="advant-item">
                     <h3 class="advant-subtitle"> УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p class="advant-text1">Ідейні міркування, і навіть початок повсякденної роботи з формування
+                    <p class="advant-text">Ідейні міркування, і навіть початок повсякденної роботи з формування
                         позиції.</p>
                 </li>
                 <li class="advant-item">
                     <h3 class="advant-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p class="advant-text2">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                    <p class="advant-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                     </p>
                 </li>
                 <li class="advant-item">
                     <h3 class="advant-subtitle">ПЛАНУВАННЯ</h3>
-                    <p class="advant-text3">Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <p class="advant-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li class="advant-item">
                     <h3 class="advant-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p class="advant-text4">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                    <p class="advant-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                     </p>
                 </li>
             </ul>
