--- a/index.html
+++ b/index.html
@@ -44,42 +44,42 @@
     <main>
         <!--Секція Ефективні рішення для вашого бізнесу (BG)-->
         <section class="bg-section"> 
-            <div class="container bg-container">
+            <div class="container">
             <h1 class="bg-title">Ефективні рішення для вашого бізнесу</h1>
             <button class="bg-button" type="button">Замовити послугу</button>
         </div>
         </section>
         <!-- Секція Наші переваги-->
-        <section class="advant-section">
-            <div class="container advant-container">
-            <h2 class="visually-hidden">Наші переваги</h2>
-            <ul class="advant-list">
-                <li class="advant-item">
-                    <h3 class="advant-subtitle"> УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p class="advant-text">Ідейні міркування, і навіть початок повсякденної роботи з формування
+        <section class="section advantages-section">
+            <div class="container">
+            <h2 class="title visually-hidden">Наші переваги</h2>
+            <ul class="advantages-list">
+                <li class="advantages-item">
+                    <h3 class="advantages-subtitle"> УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="advantages-text">Ідейні міркування, і навіть початок повсякденної роботи з формування
                         позиції.</p>
                 </li>
-                <li class="advant-item">
-                    <h3 class="advant-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p class="advant-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                <li class="advantages-item">
+                    <h3 class="advantages-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="advantages-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                     </p>
                 </li>
-                <li class="advant-item">
-                    <h3 class="advant-subtitle">ПЛАНУВАННЯ</h3>
-                    <p class="advant-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                <li class="advantages-item">
+                    <h3 class="advantages-subtitle">ПЛАНУВАННЯ</h3>
+                    <p class="advantages-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
-                <li class="advant-item">
-                    <h3 class="advant-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p class="advant-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                <li class="advantages-item">
+                    <h3 class="advantages-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="advantages-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                     </p>
                 </li>
             </ul>
             </div>
         </section>
         <!--Чим ми займаємося-->
-        <section class="activity-section">
+        <section class="section activity-section">
             <div class="container activity-container">
-            <h2 class="activity-section-title">Чим ми займаємося</h2>
+            <h2 class="title activity-section-title">Чим ми займаємося</h2>
             <ul class="activity-list">
                 <li class="activity-item">
                     <img class="activity-img" src="./images/img-1.png" alt="планшет" width="370" height="294" />
@@ -95,33 +95,41 @@
             </div>
         </section>
         <!--Наша команда-->
-        <section class="team-section">
-            <div class="container team-container">
-            <h2 class="team-section-title">Наша команда</h2>
+        <section class="section team-section">
+            <div class="container">
+            <h2 class="title team-section-title">Наша команда</h2>
             <ul class="team-list">
                 <li class="team-item">
                     <img class="team-img" src="./images/nameimg.jpg" alt="photo_igor_demyanenko" width="270"
                         height="260" />
-                    <h4 class="team-name">Ігор Дем'яненко</h4>
+                    <div class="teem-group">
+                        <h3 class="team-name">Ігор Дем'яненко</h3>
                     <p class="team-position" lang="en">Product Designer</p>
+                </div>
                 </li>
                 <li class="list-item">
                     <img class="team-img" src="./images/nameimg-1.jpg" alt="photo_olga_repina" width="270"
                         height="260" />
-                    <h4 class="team-name">Ольга Рєпіна</h4>
+                        <div class="teem-group">
+                    <h3 class="team-name">Ольга Рєпіна</h3>
                     <p class="team-position" lang="en">Frontend Developer</p>
-                </li>
+                                </div>
+                            </li>
                 <li class="team-item">
                     <img class="team-img" src="./images/nameimg-2.jpg" alt="photo_mikola_tarasov" width="270"
                         height="260" />
-                    <h4 class="team-name">Микола Тарасов</h4>
+                        <div class="teem-group">
+                    <h3 class="team-name">Микола Тарасов</h3>
                     <p class="team-position" lang="en">Marketing</p>
+                </div>
                 </li>
                 <li class="team-item">
                     <img class="team-img" src="./images/nameimg-3.jpg" alt="photo_mihailo_yermakov" width="270"
                         height="260" />
-                    <h4 class="team-name">Михайло Єрмаков</h4>
+                        <div class="teem-group">
+                    <h3 class="team-name">Михайло Єрмаков</h3>
                     <p class="team-position" lang="en">UI Designer</p>
+                </div>
                 </li>
             </ul>
             </div>
