--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
         </header>
     <main>       
         <!--Секція Наші проекти - портфоліо-->
-        <section class="project-section">
+        <section class="section project-section">
             <div class="container project-container">
             <h1 class="visually-hidden">Портфоліо</h1>
 <ul class="project-button">
@@ -57,49 +57,67 @@
             <ul class="project-list">
                 <li class="project-item"><a class="project-link" href=""><img class="project-img"
                             src="./images/portfolio/img.png" alt="наша команда фото" width="370" height="294">
-                        <h2 class="project-name">Технокряк</h2>
+                        <div class="project-group">
+                            <h2 class="project-name">Технокряк</h2>
                         <p class="project-type">Веб-сайт</p>
+                        </div>
                     </a></li>
                 <li class="project-item"><a class="project-link" href=""><img class="project-img"
                             src="./images/portfolio/img-1.png" alt="постер New Orlean vs Golden Star" width="370"
                             height="294">
-                        <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+                        <div class="project-group">
+                            <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
                         <p class="project-type">Дизайн</p>
+                        </div>
                     </a></li>
                 <li class="project-item"><a class="project-link" href=""><img class="project-img"
                             src="./images/portfolio/img-2.png" alt="логотип ресторан Seafood" width="370" height="294">
-                        <h2 class="project-name">Ресторан Seafood</h2>
+                        <div class="project-group">
+                            <h2 class="project-name">Ресторан Seafood</h2>
                         <p class="project-type">Додаток</p>
+                        </div>
                     </a></li>
                 <li class="project-item"><a class="project-link" href=""><img class="project-img"
                             src="./images/portfolio/img-3.png" alt="навушники" width="370" height="294">
-                        <h2 class="project-name">Проєкт Prime</h2>
+                        <div class="project-group">
+                            <h2 class="project-name">Проєкт Prime</h2>
                         <p class="project-type">Маркетинг</p>
+                        </div>
                     </a></li>
                 <li class="project-item"><a class="project-link" href=""><img class="project-img"
                             src="./images/portfolio/img-4.png" alt="коробки паперові" width="370" height="294">
-                        <h2 class="project-name">Проєкт Boxes</h2>
+                        <div class="project-group">
+                            <h2 class="project-name">Проєкт Boxes</h2>
                         <p class="project-type">Додаток</p>
+                        </div>
                     </a></li>
                 <li class="project-item"><a class="project-link" href=""><img class="project-img"
                             src="./images/portfolio/img-5.png" alt="монітор" width="370" height="294">
-                        <h2 class="project-name">Inspiration has no Borders</h2>
+                        <div class="project-group">
+                            <h2 class="project-name">Inspiration has no Borders</h2>
                         <p class="project-type">Веб-сайт</p>
+                        </div>
                     </a></li>
                 <li class="project-item"><a class="project-link" href=""><img class="project-img"
                             src="./images/portfolio/img-6.png" alt="книга" width="370" height="294">
-                        <h2 class="project-name">Видання Limited Edition</h2>
+                        <div class="project-group">
+                            <h2 class="project-name">Видання Limited Edition</h2>
                         <p class="project-type">Дизайн</p>
+                        </div>
                     </a></li>
                 <li class="project-item"><a class="project-link" href=""><img class="project-img"
                             src="./images/portfolio/img-7.png" alt="лейбл" width="370" height="294">
-                        <h2 class="project-name">Проєкт LAB</h2>
+                        <div class="project-group">
+                            <h2 class="project-name">Проєкт LAB</h2>
                         <p class="project-type">Маркетинг</p>
+                        </div>
                     </a></li>
                 <li class="project-item"><a class="project-link" href=""><img class="project-img"
                             src="./images/portfolio/img-8.png" alt="ноутбук" width="370" height="294">
-                        <h2 class="project-name">Growing Business</h2>
+                        <div class="project-group">
+                            <h2 class="project-name">Growing Business</h2>
                         <p class="project-type">Додаток</p>
+                        </div>
                     </a></li>
             </ul>
             </div>
