--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- Секція Наші переваги-->
         <section class="section advantages-section">
             <div class="container">
-            <h2 class="title visually-hidden">Наші переваги</h2>
+            <h2 class="visually-hidden">Наші переваги</h2>
             <ul class="advantages-list">
                 <li class="advantages-item">
                     <h3 class="advantages-subtitle"> УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -78,8 +78,8 @@
         </section>
         <!--Чим ми займаємося-->
         <section class="section activity-section">
-            <div class="container activity-container">
-            <h2 class="title activity-section-title">Чим ми займаємося</h2>
+            <div class="container">
+            <h2 class="title activity-title">Чим ми займаємося</h2>
             <ul class="activity-list">
                 <li class="activity-item">
                     <img class="activity-img" src="./images/img-1.png" alt="планшет" width="370" height="294" />
@@ -107,7 +107,7 @@
                     <p class="team-position" lang="en">Product Designer</p>
                 </div>
                 </li>
-                <li class="list-item">
+                <li class="team-item">
                     <img class="team-img" src="./images/nameimg-1.jpg" alt="photo_olga_repina" width="270"
                         height="260" />
                         <div class="teem-group">
@@ -140,12 +140,12 @@
         <a class="logo" href="./index.html">Web<span class="span-footer">Studio</span></a>
         <address class="footer-adress">
             <ul class="footer-contact-list">
-                <li class="contact-item"><a class="footer-adress"
+                <li class="footer-contact-item"><a class="footer-adress"
                         href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru">м.
                         Київ, пр-т Лесі Українки, 26</a></li>
-                <li class="contact-item"><a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <li class="footer-contact-item"><a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li class="contact-item"><a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a> </li>
+                <li class="footer-contact-item"><a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a> </li>
             </ul>
         </address>
         </div>
