--- a/portfolio.html
+++ b/portfolio.html
@@ -44,11 +44,11 @@
         </header>
     <main>       
         <!--Секція Наші проекти - портфоліо-->
-        <section class="section project-section">
-            <div class="container project-container">
+        <section class="project-section">
+            <div class="container">
             <h1 class="visually-hidden">Портфоліо</h1>
 <ul class="project-button">
-    <li><button class="filter-button-all" type="button">Усі</button></li>
+    <li><button class="filter-button" type="button">Усі</button></li>
     <li><button class="filter-button" type="button">Веб-сайти</button></li>
     <li><button class="filter-button" type="button">Додатки</button></li>
     <li><button class="filter-button" type="button">Дизайн</button></li>
@@ -123,21 +123,23 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
-        <div class="container footer-container">
-            <a class="logo" href="./index.html">Web<span class="span-footer">Studio</span></a>
-            <address class="footer-adress">
-                <ul class="footer-contact-list">
-                    <li class="contact-item"><a class="footer-adress"
-                            href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru">м.
-                            Київ, пр-т Лесі Українки, 26</a></li>
-                    <li class="contact-item"><a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    </li>
-                    <li class="contact-item"><a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a> </li>
-                </ul>
-            </address>
-        </div>
-    </footer>
+<footer class="footer">
+    <div class="container footer-container">
+        <a class="logo" href="./index.html">Web<span class="span-footer">Studio</span></a>
+        <address class="footer-adress">
+            <ul class="footer-contact-list">
+                <li class="footer-contact-item"><a class="footer-adress"
+                        href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru">м.
+                        Київ, пр-т Лесі Українки, 26</a></li>
+                <li class="footer-contact-item"><a class="footer-mail"
+                        href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="footer-contact-item"><a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </address>
+    </div>
+</footer>
 
 
 </body>
