--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
         </header>
     <main>       
         <!--Секція Наші проекти - портфоліо-->
-        <section class="project-section">
+        <section class="section project-section">
             <div class="container">
             <h1 class="visually-hidden">Портфоліо</h1>
 <ul class="project-button">
